kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/031_testGenericTypeAsReturnParameterAndSelf3.kmt
/* $Id:$ 
 * Creation : June 18, 2009
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

package testGenericTypeAsReturnParameter3;


require kermeta
using kermeta::standard

class Test<IN>
{
    attribute a: Integer
   
    operation initialize() : Test<IN> is
    do
        self.a := 123
        result := self.asType(Test<IN>)
    end   
}